Bug 89885 - UI: File Properties Dialog width changes with length of Location
Summary: UI: File Properties Dialog width changes with length of Location
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.0.0 target:4.4.3
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-08 15:06 UTC by Gordo
Modified: 2015-04-08 11:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-03-08 15:06:44 UTC
1. New Text Document.
2. File -> Properties.
Result:
Two rows of tabs.
3. Save file to a location with short path such as desktop.
4. File -> Properties.
Result:
Two rows of tabs.
5. Save file to a location with long path.
6. File -> Properties.
Result:
Width of dialog has increased and now there is one row of tabs.

Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Comment 1 A (Andy) 2015-03-08 18:13:14 UTC
Reproducible with LO 4.4.1.2, Win 8.1.

This is due to that the path is shown in the "General" tab and if it is longer then the dialog has to be wider to show it and if it is wider then the tabs have no longer to be splitted on two lines.  Therefore, I am not sure respectively I don't think this is a bug.
Comment 2 Gordo 2015-03-08 20:52:33 UTC
Maybe it should stay the same size with the two rows of tabs, but have the location scrollable like in the Windows file property dialog, or just have it with the one row of tabs, also with the scrollable location.
Comment 3 Adolfo Jayme Barrientos 2015-03-14 03:19:55 UTC
Gordo: thank you for your bug report.

I like that idea of making the label scrollable to avoid widening the dialog. I think this can be done by using a read-only GtkEntry. @Caolán: what do you think? :-)
Comment 4 Gordo 2015-03-14 12:47:13 UTC
See also bug 83089
Comment 5 Commit Notification 2015-04-03 10:55:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c8e39299ac4ced2dc72f373526089b9574a14a8a

Resolves: tdf#89885 use a readonly GtkEntry for location

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-04-08 11:31:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=233d3efda5523921b80ad8ebaf2b2e7175169e0e&h=libreoffice-4-4

Resolves: tdf#89885 use a readonly GtkEntry for location

It will be available in 4.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.