Resolves: tdf#89885 use a readonly GtkEntry for location

Change-Id: I324d5e0776da942eae62984b96951d9947702b49