sfx2/source/dialog/dinfdlg.cxx
@@ -754,7 +754,7 @@ SfxDocumentPage::SfxDocumentPage(vcl::Window* pParent, const SfxItemSet& rItemSe
     get(m_pChangePassBtn, "changepass");
 
     get(m_pShowTypeFT, "showtype");
-    get(m_pFileValFt, "showlocation");
+    get(m_pFileValEd, "showlocation");
     get(m_pShowSizeFT, "showsize");
     m_aUnknownSize = m_pShowSizeFT->GetText();
     m_pShowSizeFT->SetText(OUString());
@@ -1028,10 +1028,10 @@ void SfxDocumentPage::Reset( const SfxItemSet* rSet )
         // we know it's a folder -> don't need the final slash, but it's better for WB_PATHELLIPSIS
         aPath.removeFinalSlash();
         OUString aText( aPath.PathToFileName() ); //! (pb) MaxLen?
-        m_pFileValFt->SetText( aText );
+        m_pFileValEd->SetText( aText );
     }
     else if ( aURL.GetProtocol() != INetProtocol::PrivSoffice )
-        m_pFileValFt->SetText( aURL.GetPartBeforeLastName() );
+        m_pFileValEd->SetText( aURL.GetPartBeforeLastName() );
 
     // handle access data
     bool m_bUseUserData = rInfoItem.IsUseUserData();
